[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/OpenSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/key.png" type="Texture" id=2]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="HUD" type="Node"]
script = ExtResource( 3 )

[node name="score" type="Label" parent="."]
margin_right = 480.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upArrow" type="Sprite" parent="."]
position = Vector2( 75, 60 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="downArrow" type="Sprite" parent="."]
position = Vector2( 75, 160 )
rotation = 3.14159
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="highScore" type="Label" parent="."]
margin_top = 15.0
margin_right = 465.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "hi: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="direction" type="Label" parent="."]
margin_top = 650.0
margin_right = 480.0
margin_bottom = 700.0
custom_fonts/font = SubResource( 2 )
text = "press up/down to start"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
